[gd_scene load_steps=8 format=2]

[ext_resource path="res://Maps/LevelBase.gd" type="Script" id=2]
[ext_resource path="res://UI/SniffHint.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/SniffHintContainer.gd" type="Script" id=4]
[ext_resource path="res://Maps/Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Dogtective.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sprites/tiles/grass.png" type="Texture" id=14]

[sub_resource type="TileSet" id=1]
0/name = "grass.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grass.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="LevelBase" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 1 )
format = 1

[node name="YSort" type="YSort" parent="."]

[node name="Dogtective" parent="YSort" instance=ExtResource( 11 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Dogtective"]
remote_path = NodePath("../../../Camera")
update_rotation = false
update_scale = false

[node name="Objects" type="YSort" parent="YSort"]

[node name="Actions" type="Node2D" parent="."]

[node name="Camera" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000
editor_draw_limits = true
editor_draw_drag_margin = false

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Root" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/Root"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
draw_center = false
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI/Root"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="GUI/Root/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 634.0
margin_bottom = 442.0

[node name="SniffHintContainer" type="HBoxContainer" parent="GUI/Root/MarginContainer/Control"]
margin_right = 164.0
margin_bottom = 32.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SniffHint" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]

[node name="SniffHint2" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
margin_left = 36.0
margin_right = 68.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="SniffHint3" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 72.0
margin_right = 104.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="SniffHint4" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 108.0
margin_right = 140.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="SniffHint5" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 144.0
margin_right = 176.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="SniffHint6" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 180.0
margin_right = 212.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="SniffHint7" parent="GUI/Root/MarginContainer/Control/SniffHintContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 216.0
margin_right = 248.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Button" type="Button" parent="GUI/Root/MarginContainer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -109.0
margin_bottom = 20.0
text = "Upgrade Sniffer"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GUI/Root/MarginContainer/Control/Button" to="." method="_on_Button_pressed"]
